max height to avoid image overflow

--- a/static/css/detalle-producto.css
+++ b/static/css/detalle-producto.css
@@ -58,6 +58,7 @@ body {
   right: 0;
   width: 100%;
   margin: auto;
+  max-height: 65px;
 }
 
 .container .producto-info {
